# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "gegl"
description = "GEGL data structure library for Rust."
repository = "https://git.bauke.xyz/driftingnebula/interlinked"
license = "AGPL-3.0-or-later"
version = "0.0.0"
authors = ["Bauke <me@bauke.xyz>"]
edition = "2021"
readme = "../README.md"

[lib]
path = "source/lib.rs"

[lints]
workspace = true

[dependencies]
indexmap = "2.1.0"
paste = "1.0.14"

[dev-dependencies]
insta = "1.34.0"
